# ask

./: .bunfig.toml  .gitignore  .gitmodules  .release-please-manifest.json  .worktreeinclude  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  bunfig.toml  codecov.yml  hooks.json  orca.yaml  package-lock.json  package.json  release-please-config.json  tsconfig.json  turbo.json  vercel.ts  wrangler.jsonc
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agent-memory/gardening-doc-gardener/: state.json
.claude/agent-memory/gardening-gardening-doc-gardener/: MEMORY.md  project-structure.md  recurring-issues.md
.claude/rules/: known-docs-hosts.md
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release-cargo.yml  release-rust.yml  release.yml
.please/: config.yml
.please/docs/: tracks.jsonl
.please/docs/decisions/: index.md  (+2 more)
apps/docs/: .gitignore  README.md  eslint.config.ts  nuxt.config.ts  package.json  wrangler.jsonc
apps/registry/: content.config.ts  eslint.config.ts  nuxt.config.ts  package.json  vitest.config.ts  wrangler.jsonc
crates/ask/: Cargo.toml  README.md
crates/ask/src/: agents.rs  ask_json.rs  cli.rs  http.rs  ignore_files.rs  install.rs  io.rs  lib.rs  list.rs  lockfiles.rs  main.rs  markers.rs  registry.rs  resolved.rs  resolvers.rs  skill.rs  spec.rs  storage.rs
crates/ask/src/commands/: add.rs  docs.rs  ensure_checkout.rs  fetch.rs  find_doc_paths.rs  find_skill_paths.rs  mod.rs  remove.rs  resolve_csp.rs  search.rs  skills.rs  src.rs
crates/ask/src/discovery/: candidates.rs  mod.rs
crates/ask/src/lockfiles/: mod.rs  pnpm.rs
crates/ask/src/registry/: api.rs  mod.rs
crates/ask/src/resolvers/: maven.rs  mod.rs  npm.rs  pub_dev.rs  pypi.rs
crates/ask/src/skills/: agent_detect.rs  lock.rs  mod.rs  spec_key.rs  symlinks.rs  vendor.rs
crates/ask/src/sources/: github.rs  llms_txt.rs  mod.rs  npm.rs
crates/ask/src/store/: cache.rs  mod.rs  paths.rs
evals/next-canary/: .env.example  .gitignore  README.md  package.json  run-all.sh  run-eval.sh  tsconfig.json
evals/nuxt-ui/: .env.example  README.md  analyze.ts  package.json
example/: .gitignore  AGENTS.md  ask.json  package.json
hooks/: fetch-hint.mjs  fetch-hint.test.mjs  hooks.json  known-docs-hosts.json
npm/: README.md
npm/ask/: install.js  package.json
npm/scripts/: generate-platform-packages.mjs
patches/: @nuxt%2Ftest-utils@4.0.0.patch  docs-please@0.2.6.patch
scripts/: migrate-registry-to-json.test.ts  migrate-registry-to-json.ts  parity-diff.sh
skills/add-docs/: SKILL.md
skills/ask/: SKILL.md
skills/setup-docs/: SKILL.md
skills/sync-docs/: SKILL.md
src/: agents.ts  config.ts  index.ts  skill.ts  storage.ts
src/sources/: github.ts  index.ts  npm.ts  web.ts
(+565 files in other folders)
